--- a/index.html
+++ b/index.html
@@ -81,10 +81,21 @@ async function register(){
     const email = document.getElementById('email').value
     const password = document.getElementById('password').value
 
-    const { data, error } = await db.auth.signUp({
-        email: email,
-        password: password
-    })
+    const { data, error } = const { data, error } = await supabase.auth.signUp({
+  email: email,
+  password: password
+});
+
+if (data.user) {
+  await supabase.from("profiles").insert([
+    {
+      user_id: data.user.id,
+      email: data.user.email,
+      rolex: "user",
+      membership_status: "inactive"
+    }
+  ]);
+}
 
     if(error){
         alert("Hata: " + error.message)
@@ -155,4 +166,5 @@ if ("serviceWorker" in navigator) {
 </script>
 
 </body>
+
 </html>
