--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ const { createClient } = supabase;
 const db = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
 // Senin Vercel URL'in
-const REDIRECT_URL = "https://araç-analiz.vercel.app";
+const REDIRECT_URL = "https://arac-analiz.vercel.app";
 
 // Kayıt
 async function register(){
@@ -197,3 +197,4 @@ async function uyelikAl(){
 
 </body>
 </html>
+
