--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ async function register(){
     });
 
     if(error) alert(error.message);
-    else alert("Kayıt başarılı! Email doğrulama maili gönderildi.");
+    else alert("Kayıt başarı ile oluşturuldu lütfen emaile gidip onay veriniz.");
 }
 
 // Giriş
@@ -197,4 +197,5 @@ async function uyelikAl(){
 
 </body>
 </html>
+
 
