--- a/index.html
+++ b/index.html
@@ -3,199 +3,137 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Araç Analiz - Güvenli ve Sözleşmeli</title>
+<title>Araç Analiz</title>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-body{
-    font-family: Arial;
-    background:#0d47a1;
-    color:white;
-    text-align:center;
-    padding:20px;
-}
-.box{
-    background:white;
-    color:black;
-    padding:20px;
-    border-radius:10px;
-    max-width:450px;
-    margin:auto;
-    margin-top:20px;
-}
-input,button{
-    padding:10px;
-    width:100%;
-    margin-top:10px;
-}
-button{
-    background:#0d47a1;
-    color:white;
-    border:none;
-    cursor:pointer;
-}
-.hidden{ display:none; }
-.legal{ font-size:12px; color:yellow; margin-top:20px; text-align:left; }
+body{font-family:Arial;background:#0d47a1;color:white;text-align:center;padding:20px;}
+.box{background:white;color:black;padding:20px;border-radius:10px;max-width:450px;margin:auto;margin-top:20px;}
+input,button{padding:10px;width:100%;margin-top:10px;}
+button{background:#0d47a1;color:white;border:none;cursor:pointer;}
+.hidden{display:none;}
 </style>
 </head>
 <body>
 
-<h1>Araç Analiz Sistemi</h1>
+<h1>Araç Analiz</h1>
 
-<!-- Kayıt / Login -->
 <div class="box" id="authBox">
-    <h3>Kullanıcı Giriş</h3>
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Şifre">
-    <button onclick="register()">Kayıt Ol</button>
-    <button onclick="login()">Giriş Yap</button>
+<h3>Giriş</h3>
+<input type="email" id="email" placeholder="Email">
+<input type="password" id="password" placeholder="Şifre">
+<button onclick="register()">Kayıt Ol</button>
+<button onclick="login()">Giriş Yap</button>
 </div>
 
-<!-- Sözleşme Onayı -->
 <div class="box hidden" id="tosBox">
-    <h3>Kullanıcı Sözleşmesi ve Gizlilik Politikası</h3>
-    <div style="text-align:left; max-height:200px; overflow-y:auto; border:1px solid #ccc; padding:10px; margin-bottom:10px;">
-        <p>Bu platform yalnızca bilgilendirme amaçlıdır. Araç bilgileri resmi kayıtlardan doğrulanmalıdır.</p>
-        <p>Kullanıcı, sisteme yüklediği veya sorguladığı verilerin doğruluğunu kabul eder ve site yönetimi hukuki sorumluluk kabul etmez.</p>
-        <p>Gizlilik politikamız gereği kişisel veriler yalnızca sistem içi kullanım ve yasal gereklilikler için saklanır.</p>
-        <p>Ücretli hizmetler için ödeme işlemleri Iyzico tarafından güvenli şekilde yürütülür.</p>
-    </div>
-    <label>
-        <input type="checkbox" id="tosCheck"> Okudum ve onaylıyorum
-    </label>
-    <button onclick="acceptTOS()">Onayla ve Devam Et</button>
+<h3>Kullanıcı Sözleşmesi</h3>
+<label><input type="checkbox" id="tosCheck"> Okudum kabul ediyorum</label>
+<button onclick="acceptTOS()">Devam</button>
 </div>
 
-<!-- Kullanıcı Paneli -->
-<div class="box hidden" id="userPanel">
-    <h3>Plaka Sorgu</h3>
-    <input type="text" id="plaka" placeholder="Plaka gir">
-    <button onclick="plakaSorgu()">Sorgula</button>
+<div class="box hidden" id="panel">
+<h3>Plaka Sorgu</h3>
+<input id="plaka" placeholder="Plaka">
+<button onclick="plakaSorgu()">Sorgula</button>
 
-    <hr>
+<hr>
 
-    <h3>Analiz Satın Al</h3>
-    <button onclick="bireyselAl()">30 TL Tek Sorgu</button>
-    <button onclick="uyelikAl()">Aylık Üyelik</button>
+<h3>Analiz Satın Al</h3>
+<button onclick="tekSorgu()">30 TL Tek Sorgu</button>
+<button onclick="uyelik()">Aylık Üyelik</button>
 
-    <button onclick="logout()">Çıkış Yap</button>
-
-    <p class="legal">
-        Not: Bu platform yalnızca bilgilendirme amaçlıdır. Araç bilgileri resmi kayıtlardan doğrulanmalıdır. Site yönetimi hukuki sorumluluk kabul etmez.
-    </p>
+<button onclick="logout()">Çıkış</button>
 </div>
 
 <script>
-const SUPABASE_URL = "https://lxuqpziqyrrwtzcksgwz.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx4dXFwemlxeXJyd3R6Y2tzZ3d6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NDM4MzMsImV4cCI6MjA4NjExOTgzM30.WOwK1D4eDNyPxYOe7HUuwndgPFQgmdmCcRxWsfyTSps";
+const SUPABASE_URL="https://lxuqpziqyrrwtzcksgwz.supabase.co";
+const SUPABASE_ANON_KEY="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imx4dXFwemlxeXJyd3R6Y2tzZ3d6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NDM4MzMsImV4cCI6MjA4NjExOTgzM30.WOwK1D4eDNyPxYOe7HUuwndgPFQgmdmCcRxWsfyTSps";
 
 const { createClient } = supabase;
 const db = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-// Senin Vercel URL'in
-const REDIRECT_URL = "https://arac-analiz.vercel.app";
+const emailEl=document.getElementById("email");
+const passwordEl=document.getElementById("password");
+const authBox=document.getElementById("authBox");
+const tosBox=document.getElementById("tosBox");
+const panel=document.getElementById("panel");
+const tosCheck=document.getElementById("tosCheck");
 
-// Kayıt
 async function register(){
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
+const email=emailEl.value;
+const password=passwordEl.value;
 
-    const { error } = await db.auth.signUp({
-        email, password,
-        options: { emailRedirectTo: REDIRECT_URL }
-    });
+const { data, error } = await db.auth.signUp({email,password});
+if(error)return alert(error.message);
 
-    if(error) alert(error.message);
-    else alert("Kayıt başarı ile oluşturuldu lütfen emaile gidip onay veriniz.");
+await db.from("profiles").insert([{id:data.user.id,email}]);
+
+alert("Kaydınız başarıyla gerçekleşmiştir. Lütfen hesabınızı aktifleştirmek için emailinizi kontrol ediniz.");
 }
 
-// Giriş
 async function login(){
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
+const email=emailEl.value;
+const password=passwordEl.value;
 
-    const { data, error } = await db.auth.signInWithPassword({
-        email, password,
-        options: { emailRedirectTo: REDIRECT_URL }
-    });
+const { data, error } = await db.auth.signInWithPassword({email,password});
+if(error)return alert(error.message);
 
-    if(error){ alert(error.message); return; }
-    if(!data.user.email_confirmed_at){ alert("Email doğrulanmamış!"); return; }
+const { data:profile } = await db.from("profiles").select("*").eq("id",data.user.id).single();
 
-    // Sözleşme kontrolü
-    const { data: profile } = await db.from('profiles').select('tos_accepted').eq('id', data.user.id).single();
-    if(profile && profile.tos_accepted){
-        document.getElementById("authBox").classList.add("hidden");
-        document.getElementById("userPanel").classList.remove("hidden");
-    } else {
-        document.getElementById("authBox").classList.add("hidden");
-        document.getElementById("tosBox").classList.remove("hidden");
-    }
+authBox.classList.add("hidden");
+
+if(!profile.tos_accepted) tosBox.classList.remove("hidden");
+else panel.classList.remove("hidden");
 }
 
-// Sözleşme onayı
 async function acceptTOS(){
-    const check = document.getElementById('tosCheck').checked;
-    if(!check){ alert("Devam etmek için sözleşmeyi onaylamalısınız!"); return; }
+if(!tosCheck.checked)return alert("Onay gerekli");
 
-    const { data: { user }, error } = await db.auth.getUser();
-    if(error || !user) return alert("Giriş yapmalısınız");
+const { data:{user} } = await db.auth.getUser();
+await db.from("profiles").update({tos_accepted:true}).eq("id",user.id);
 
-    const { error: updateError } = await db.from('profiles').update({
-        tos_accepted: true
-    }).eq('id', user.id);
-
-    if(updateError) return alert("Hata: " + updateError.message);
-
-    document.getElementById("tosBox").classList.add("hidden");
-    document.getElementById("userPanel").classList.remove("hidden");
+tosBox.classList.add("hidden");
+panel.classList.remove("hidden");
 }
 
-// Çıkış
-async function logout(){
-    await db.auth.signOut();
-    location.reload();
+async function tekSorgu(){
+const { data:{user} } = await db.auth.getUser();
+await db.from("odemeler").insert([{user_id:user.id,tip:"tek",tutar:30}]);
+alert("Tek sorgu hakkı verildi (demo)");
 }
 
-// Plaka sorgu demo
+async function uyelik(){
+const { data:{user} } = await db.auth.getUser();
+const bitis=new Date();
+bitis.setMonth(bitis.getMonth()+1);
+
+await db.from("profiles").update({
+membership_status:"aktif",
+membership_end:bitis
+}).eq("id",user.id);
+
+alert("Üyelik aktif");
+}
+
 async function plakaSorgu(){
-    const plaka = document.getElementById("plaka").value.toUpperCase();
-    alert("Plaka sorgulandı (demo): " + plaka);
+const { data:{user} } = await db.auth.getUser();
+const { data:profile } = await db.from("profiles").select("*").eq("id",user.id).single();
+
+if(profile.membership_status==="aktif"){
+alert("Sınırsız sorgu hakkın var");
+return;
 }
 
-// Ödeme demo
-async function bireyselAl(){
-    const { data: { user } } = await db.auth.getUser();
-    if(!user){ alert("Giriş yap"); return; }
-
-    const token = prompt("Demo için Iyzico token giriniz")
-    const response = await fetch("/api/iyzico_payment", {
-        method:"POST",
-        headers:{ "Content-Type":"application/json" },
-        body: JSON.stringify({ userId: user.id, amount:30, paymentToken: token })
-    });
-    const result = await response.json();
-    if(result.success) alert("Ödeme başarılı! Tek sorgu hakkı eklendi.");
-    else alert("Ödeme başarısız: " + result.message);
+alert("Tek sorgu kullanıldı (demo)");
 }
 
-async function uyelikAl(){
-    const { data: { user } } = await db.auth.getUser();
-    if(!user){ alert("Giriş yap"); return; }
-
-    const response = await fetch("/api/iyzico_payment", {
-        method:"POST",
-        headers:{ "Content-Type":"application/json" },
-        body: JSON.stringify({ userId: user.id, amount:100, paymentToken:"TOKEN_FOR_SUBSCRIPTION" })
-    });
-    const result = await response.json();
-    if(result.success) alert("Üyelik aktif edildi.");
-    else alert("Ödeme başarısız: " + result.message);
+async function logout(){
+await db.auth.signOut();
+location.reload();
 }
 </script>
 
 </body>
 </html>
-
-
